Implementazione completa sistema template unificato e correzioni localizzazione
 FUNZIONALITÀ PRINCIPALI:
- Dialog unificato per template con nome + descrizione in un unico form
- Logica dinamica: 'Salva Template' (nuovo) vs 'Salva Modifiche' (esistente)
- Pulsanti che si aggiornano automaticamente in base alla selezione dropdown
- Messaggi di conferma differenziati per nuovo/aggiornamento template

 CORREZIONI LOCALIZZAZIONE:
- Risolto bug 'common.warning' che mostrava chiavi i18n invece del testo
- Sostituito document.documentElement.lang con localStorage in tutte le pagine
- Corretto dialog 'Conferma Generazione' AI ora tradotto correttamente
- Localizzazione completa di tutti gli alert/confirm in certificates, vehicle, billing

 FILE MODIFICATI:
- certificates.html: Sistema template completo + correzioni localizzazione
- billing.html: Correzioni localizzazione date
- vehicle.html: Correzioni localizzazione grafici e formattazione
- server.js: Aggiornamento branding Service Portal

 RISULTATO: Sistema template professionale con UX migliorata e localizzazione perfetta

--- a/billing.html
+++ b/billing.html
@@ -519,7 +519,7 @@
         const month = String(date.getMonth() + 1).padStart(2, '0');
         const year = date.getFullYear();
         
-        const currentLang = document.documentElement.lang || 'it';
+        const currentLang = localStorage.getItem('servicehub-language') || 'it';
         if (currentLang === 'en') {
           return `${month}/${day}/${year}`; // MM/DD/YYYY per inglese
         } else {
