Document Stripe console errors as external
- Add comment explaining Stripe errors come from browser extensions
- These errors are not from our application code
- Helps developers understand the error source during debugging
- No functional impact on the application

--- a/billing.html
+++ b/billing.html
@@ -10,6 +10,7 @@
   <link rel="manifest" href="/favicon/manifest.json" />
   <script src="/js/auth-config.js"></script>
   <script src="/js/custom-dialog.js"></script>
+  <!-- Note: Stripe errors in console are from browser extensions, not our code -->
   <style>
     /* Stili per i pulsanti preset attivi */
     .range-btn-active {
